# polymarket-trader

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude/skills/: market-research.md  order-management.md  paper-trading.md  portfolio.md  trade-execution.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-07-dry-run-implementation.md  2026-03-07-dry-run-mode-design.md  2026-03-07-polymarket-trader-cli-design.md  2026-03-07-polymarket-trader-cli-implementation.md  2026-03-08-integration-testing-design.md  2026-03-08-integration-testing-plan.md  2026-03-08-user-feedback-round2-design.md
src/: cli.rs  client.rs  gamma.rs  main.rs  output.rs  resolve.rs  signer.rs
src/commands/: account.rs  dry_run.rs  markets.rs  mod.rs  orders.rs  prices.rs  watch.rs
src/dry_run/: db.rs  portfolio.rs
tests/: cli.rs  fork_tests.rs
tests/integration/: fork_setup.rs  mock_clob.rs  mod.rs  test_account.rs  test_auth.rs  test_orders.rs
