[package]
name = "polymarket-trader"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
alloy = { version = "1.6", features = ["signer-aws"] }
aws-config = "1.8"
aws-sdk-kms = "1.99"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rust_decimal = "1.40"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
